adjust authentication to follow cordova plugin
